--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,14 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",    root_path %></li>
         <li><%= link_to "Help",    help_path %></li>
+
         <% if logged_in? %>
           <li><%= link_to "User manager", users_path %></li>
+          <li><%= link_to "Logout", logout_path, method: "delete" %></li>
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
+
       </ul>
     </nav>
   </div>
