--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,35 @@
 <% if logged_in? %>
-
+  <div class="row">
+    <aside class="col-md-4">
+   	 <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="entry_form">
+        <%= render 'shared/entry_form' %>
+      </section>
+    </aside>
+    <div class="col-md-7">
+      <h3>Entry Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
 <% else %>
-	<% provide(:title, "Home") %>
-	<h1>Sample App</h1>
-	<p>
-	  This is the home page for the
-	  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-	  sample application.
-	</p>
+<div class="center jumbotron">
+  <h1>Welcome to The Blog</h1>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+
+  <div class="row">
+    <div class="col-md-8">
+    </div>
+  </div>
+</div>
+
+<div class="all_feed">
+  <div class="col-md-6">
+      <h3>Entry Feed</h3>
+      <%= render 'shared/feed' %>
+  </div>
+</div>
+  
 <% end %>
